@@ -3,9 +3,7 @@
 - title: About me
   url: 'index.html#about'
 - title: Seamstress
-  url: 'index.html#seamstress'
-- title: Alterations and Repairs
-  url: 'index.html#alterations'
+  url: 'seamstress.html'
 - title: Sizing
   url: 'index.html#sizing'
 - title: Gallery
