@@ -115,15 +115,7 @@ $(document).ready(function(){
             
             
                 <li id="" class=" border nav-item border-white mx-2">
-                    <a class="nav-link " href="/metropolis/index.html#seamstress">Seamstress</a>
-                </li>
-            
-        
-            
-            
-            
-                <li id="" class=" border nav-item border-white mx-2">
-                    <a class="nav-link " href="/metropolis/index.html#alterations">Alterations and Repairs</a>
+                    <a class="nav-link " href="/metropolis/seamstress.html">Seamstress</a>
                 </li>
             
         
@@ -221,40 +213,6 @@ Please enjoy browsing <a href="/metropolis/index.html#gallery">the gallery</a> a
 Helen
 </p>
 </div><!-- end about section -->
-<div name="seamstress">
-<a name="seamstress"></a>
-<h2 class="my-4">Seamstress</h2>
-<p>
-I custom make clothing for men and women, and can advise and recommend designs and fabrics to suit clients needs and budget. I am dedicated to pleasing my customers by offering the best workmanship and personal fit.<br />Please <a href="/metropolis/index.html#contact">contact me</a> to arrange a personal consultation. and I can explain the process and advise an estimated timeline according to your needs.
-</p><!-- end paragraph -->
-</div><!-- end seamstress section -->
-
-<div name="alterations" class="py-4">
-<a name="alterations"></a>
-<h2 class="my-4">Alterations</h2>
-<div class="container mb-4">
-<div>I alter mens, ladies and childrens clothing: suits, uniforms, casual wear, business trousers, corporate wear, maternity wear, tailor made pants/trousers, jeans, shirts, t-shirts, leather, almost anything. <br />When you purchase from online stores, I can make it fit you.</div>
-<ul>I can:
-<li>shorten or lengthen hems and sleeves,</li>
-<li>take in side and centre back seams, </li>
-<li>replace zips, </li>
-<li>raise bust and waist lines in womans dresses or tops, altering the shoulder seams</li>
-<li>alter necklines, </li>
-<li>shorten straps, </li>
-<li>remove sleeves</li>
-<li>take in waist or let it out</li>
-<li>replace shoulder pads</li>
-<li>replace buttons, snap fasteners, hook &amp; eyes,</li>
-<li>repair button holes,</li>
-<li>replace elastic,</li>
-<li>replace broken stitching or seams,</li>
-<li>patch holes and mend tears,</li>
-<li>repair or add splits at hems,</li>
-<li>add pockets,</li>
-<li>add gussets,</li>
-</ul>
-</div><!-- end container -->
-</div><!-- end alterations -->
 <div name="sizing" class="py-4">
 <a name="sizing"></a>
 <h2 class="my-4">Sizing</h2>
