@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
-    <title>Metropolis Clothing - Contact me</title>
+    <title>Metropolis Clothing - Seamstress</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Contact me">
-<meta name="keywords" content="Contact Helen">
+<meta name="description" content="">
+<meta name="keywords" content="Pattern making, custom clothing, clothing, Melbourne, Helen Aldred, design 1920s, 1930s, art deco">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/metropolis/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -150,40 +150,49 @@ $(document).ready(function(){
 
 </div>
 
-    <form action="https://getform.io/f/b59b77d7-47b2-42ad-bb29-ac8372887e98" method="POST">
-<div class="container my-4">
+    <div class="container justify-content-center">
 <div class="row">
-<div class="col-6 my-4">
-<h3>Contact me</h3>
-<p>If you would like to discuss your project, please send me a message.</p>
-<p>Work hours:<br />
-Mon - Fri 9:00 am - 5:00 pm<br />
-Weekends by appointment</p>
-</div><!-- end col -->
-<div class="col-6 my-4">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100905.363881152!2d144.98171310338242!3d-37.783181544582405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6437c221de473%3A0x5045675218cd650!2sNorthcote%20VIC%203070!5e0!3m2!1sen!2sau!4v1603596168691!5m2!1sen!2sau" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<div class="col my-3">
+<div name="seamstress">
+<a name="seamstress"></a>
+<h2 class="my-4">Seamstress</h2>
+<p>
+I custom make clothing for men and women, and can advise and recommend designs and fabrics to suit clients needs and budget. I am dedicated to pleasing my customers by offering the best workmanship and personal fit.<br />Please <a href="/metropolis/index.html#contact">contact me</a> to arrange a personal consultation. and I can explain the process and advise an estimated timeline according to your needs.
+</p><!-- end paragraph -->
+</div><!-- end seamstress section -->
 
+<div name="alterations" class="py-4">
+<a name="alterations"></a>
+<h3 class="my-4">Alterations and Repairs</h3>
+<div class="container mb-4">
+<div>I alter mens, ladies and childrens clothing: suits, uniforms, casual wear, business trousers, corporate wear, maternity wear, tailor made pants/trousers, jeans, shirts, t-shirts, leather, almost anything. <br />When you purchase from online stores, I can make it fit you.</div>
+<ul>I can:
+<li>shorten or lengthen hems and sleeves,</li>
+<li>take in side and centre back seams, </li>
+<li>replace zips, </li>
+<li>raise bust and waist lines in womans dresses or tops, altering the shoulder seams</li>
+<li>alter necklines, </li>
+<li>shorten straps, </li>
+<li>remove sleeves</li>
+<li>take in waist or let it out</li>
+<li>replace shoulder pads</li>
+<li>replace buttons, snap fasteners, hook &amp; eyes,</li>
+<li>repair button holes,</li>
+<li>replace elastic,</li>
+<li>replace broken stitching or seams,</li>
+<li>patch holes and mend tears,</li>
+<li>repair or add splits at hems,</li>
+<li>add pockets,</li>
+<li>add gussets,</li>
+</ul>
 </div><!-- end container -->
-</div><!-- end row -->
-<div class="form-group row my-4">
-  <label class="col-sm-4 col-form-label" for="name">Your name:</label><div class="col-xl-6 col-lg-8 col-md-8 col-sm-9 col-10"><input aria-required="true" required="required" class="form-required form-control" type="text" id="name" name="name" /></div>
-</div><!-- end form group --> 
-<div class="form-group row my-4">
-  <label class="col-sm-4 col-form-label" for="email">Your email:</label>
-  <div class="col-xl-6 col-lg-8 col-md-8 col-sm-9 col-10"><input onchange="valEmail('email');" class="form-required form-control" aria-required="true" type="text" id="email" required="required" placeholder="email@example.com" name="email" /></div>
-</div><!-- end form group -->
-<div class="form-group row my-4">
-  <label class="col-sm-4 col-form-label" for="contactnum">Your contact number:</label> <div class="col-xl-6 col-lg-8 col-md-8 col-sm-9 col-10"><input onchange="valPhone('contactnum');" required="required" aria-required="true" class="form-required form-control" type="text" id="contactnum" name="contactnum" /></div>
-</div><!-- end form group -->
-<div class="form-group row my-4">
-  <label class="col-sm-4 col-form-label" for="enquiry">Your enquiry:</label> <div class="col-xl-6 col-lg-8 col-md-8 col-sm-9 col-10"><textarea rows="3" required="required" aria-required="true" class="form-required form-control" type="text" id="enquiry" name="enquiry"></textarea></div>
-</div><!-- end form group -->
-  <div class="text-center">
-  <button class="btn btn-primary" id="submit" name="submit" type="submit" value="Send enquiry">Send enquiry</button>
-  </div>
-</div><!-- end col -->
-</form>
+</div><!-- end alterations -->
 <script src="/metropolis/assets/js/form.js"></script>
+</div><!-- end outer col -->
+</div><!-- end outer row -->
+</div>
+<!-- end container -->
+<p>&lt;/div&gt;<!-- end seamstress section --></p>
 
 <div class="text-center h6">Copyright © 2020 Metropolis Clothing - All Rights Reserved.</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
