@@ -117,15 +117,7 @@ $(document).ready(function(){
             
             
                 <li id="" class=" border nav-item border-white mx-2">
-                    <a class="nav-link " href="/metropolis/index.html#seamstress">Seamstress</a>
-                </li>
-            
-        
-            
-            
-            
-                <li id="" class=" border nav-item border-white mx-2">
-                    <a class="nav-link " href="/metropolis/index.html#alterations">Alterations and Repairs</a>
+                    <a class="nav-link " href="/metropolis/seamstress.html">Seamstress</a>
                 </li>
             
         
