@@ -1,0 +1,49 @@
+---
+title: Seamstress
+layout: normal
+keywords: "Pattern making, custom clothing, clothing, Melbourne, Helen Aldred, design 1920s, 1930s, art deco"
+
+---
+<div class="container justify-content-center">
+<div class="row">
+<div class="col my-3">
+<div name="seamstress">
+<a name="seamstress"></a>
+<h2 class="my-4">Seamstress</h2>
+<p>
+I custom make clothing for men and women, and can advise and recommend designs and fabrics to suit clients needs and budget. I am dedicated to pleasing my customers by offering the best workmanship and personal fit.<br/>Please <a href="{{ "index.html#contact" | relative_url }}">contact me</a> to arrange a personal consultation. and I can explain the process and advise an estimated timeline according to your needs.
+</p><!-- end paragraph -->
+</div><!-- end seamstress section -->
+
+<div name="alterations" class="py-4">
+<a name="alterations"></a>
+<h3 class="my-4">Alterations and Repairs</h3>
+<div class="container mb-4">
+<div>I alter mens, ladies and childrens clothing: suits, uniforms, casual wear, business trousers, corporate wear, maternity wear, tailor made pants/trousers, jeans, shirts, t-shirts, leather, almost anything. <br/>When you purchase from online stores, I can make it fit you.</div>
+<ul>I can:
+<li>shorten or lengthen hems and sleeves,</li>
+<li>take in side and centre back seams, </li>
+<li>replace zips, </li>
+<li>raise bust and waist lines in womans dresses or tops, altering the shoulder seams</li>
+<li>alter necklines, </li>
+<li>shorten straps, </li>
+<li>remove sleeves</li>
+<li>take in waist or let it out</li>
+<li>replace shoulder pads</li>
+<li>replace buttons, snap fasteners, hook &amp; eyes,</li>
+<li>repair button holes,</li>
+<li>replace elastic,</li>
+<li>replace broken stitching or seams,</li>
+<li>patch holes and mend tears,</li>
+<li>repair or add splits at hems,</li>
+<li>add pockets,</li>
+<li>add gussets,</li>
+</ul>
+</div><!-- end container -->
+</div><!-- end alterations -->
+<script src="{{ "assets/js/form.js" | relative_url }}"></script>
+</div><!-- end outer col -->
+</div><!-- end outer row -->
+</div><!-- end container -->
+</div><!-- end seamstress section -->
+
